--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="text-center mt-5 mb-3">Remove Background</h1>
+    <h1 class="text-center mt-5 mb-3">Background Remover</h1>
     <div class="row justify-content-center form-wrapper">
       <div class="col-md-8">
         {% if error %}
